--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <meta name="robots" content="index, follow" />
-    <meta name="title" content="Guilherme Solutions - Software Developer" />
+    <meta name="title" content="Guilherme - Software Developer" />
     <meta name="description" content="Desenvolvedor especialista em Angular, AngularJS, NodeJS, React, React Native" />
     <script src="https://kit.fontawesome.com/e1d1d65040.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
